Uodate to latest api: supported query languages
